{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 324,
  "lineage": "31873430-08ea-dfed-6057-f1b2e8a014fc",
  "resources": [
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Abi_DB1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04430290caa8c0b25",
            "arn": "arn:aws:ec2:eu-west-1:643979662799:instance/i-05051f35e63ccf7ac",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05051f35e63ccf7ac",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-04f7e72c59a4c08f6",
            "private_dns": "ip-10-0-3-10.eu-west-1.compute.internal",
            "private_ip": "10.0.3.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09fd62e449d9cd63f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bdd6a0f663b4e6f5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01593caa85446e9e5",
            "tags": {
              "Name": "Abi-DB1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bdd6a0f663b4e6f5"
            ]
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.app.aws_security_group.app",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db1"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Abi_DB2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04430290caa8c0b25",
            "arn": "arn:aws:ec2:eu-west-1:643979662799:instance/i-02ae5a834ba0ee577",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-02ae5a834ba0ee577",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0e4299a1a30acdec5",
            "private_dns": "ip-10-0-4-10.eu-west-1.compute.internal",
            "private_ip": "10.0.4.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05d285056981a4113",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bdd6a0f663b4e6f5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04bb065b6834d05ed",
            "tags": {
              "Name": "Abi-DB2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bdd6a0f663b4e6f5"
            ]
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.app.aws_security_group.app",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db2"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Abi_DB3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04430290caa8c0b25",
            "arn": "arn:aws:ec2:eu-west-1:643979662799:instance/i-01d7b56d5f2faefb8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-01d7b56d5f2faefb8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0b772ff523c347552",
            "private_dns": "ip-10-0-5-10.eu-west-1.compute.internal",
            "private_ip": "10.0.5.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f70d7ec7741a977b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bdd6a0f663b4e6f5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07429dc6ff2d4eefc",
            "tags": {
              "Name": "Abi-DB3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bdd6a0f663b4e6f5"
            ]
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.app.aws_security_group.app",
            "module.db.aws_security_group.db",
            "module.db.aws_subnet.db3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-014045f5f34cda8d3",
            "owner_id": "643979662799",
            "tags": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "Abi_LB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:643979662799:loadbalancer/net/Abi-Individual-Project-app-elb/09a8cee749afd3d2",
            "arn_suffix": "net/Abi-Individual-Project-app-elb/09a8cee749afd3d2",
            "dns_name": "Abi-Individual-Project-app-elb-09a8cee749afd3d2.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:643979662799:loadbalancer/net/Abi-Individual-Project-app-elb/09a8cee749afd3d2",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Abi-Individual-Project-app-elb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05561b827ccbd1ff6"
              },
              {
                "subnet_id": "subnet-064f445551f7f7dd8"
              },
              {
                "subnet_id": "subnet-0670ab79760eadc48"
              }
            ],
            "subnets": [
              "subnet-05561b827ccbd1ff6",
              "subnet-064f445551f7f7dd8",
              "subnet-0670ab79760eadc48"
            ],
            "tags": {
              "Name": "Abi-Individual-Project"
            },
            "vpc_id": "vpc-0d17110a25941edcd",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.app.aws_subnet.app_1",
            "module.app.aws_subnet.app_2",
            "module.app.aws_subnet.app_3"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Abi_AppL",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:643979662799:listener/net/Abi-Individual-Project-app-elb/09a8cee749afd3d2/9803bd31976eb388",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:643979662799:targetgroup/Abi-Individual-Project-TG/a92f510c8a0259ad",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:643979662799:listener/net/Abi-Individual-Project-app-elb/09a8cee749afd3d2/9803bd31976eb388",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:643979662799:loadbalancer/net/Abi-Individual-Project-app-elb/09a8cee749afd3d2",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.app.aws_lb.Abi_LB",
            "module.app.aws_lb_target_group.Abi_LB_TG",
            "module.app.aws_subnet.app_1",
            "module.app.aws_subnet.app_2",
            "module.app.aws_subnet.app_3"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Abi_LB_TG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:643979662799:targetgroup/Abi-Individual-Project-TG/a92f510c8a0259ad",
            "arn_suffix": "targetgroup/Abi-Individual-Project-TG/a92f510c8a0259ad",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:643979662799:targetgroup/Abi-Individual-Project-TG/a92f510c8a0259ad",
            "lambda_multi_value_headers_enabled": false,
            "name": "Abi-Individual-Project-TG",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "id": "acl-05be990a6ff7df247",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "643979662799",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-05561b827ccbd1ff6",
              "subnet-064f445551f7f7dd8",
              "subnet-0670ab79760eadc48"
            ],
            "tags": {
              "Name": "Abi-Individual-Project"
            },
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.app.aws_subnet.app_1",
            "module.app.aws_subnet.app_2",
            "module.app.aws_subnet.app_3"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "id": "acl-048c865ff0de9eb68",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "643979662799",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-01593caa85446e9e5",
              "subnet-04bb065b6834d05ed",
              "subnet-07429dc6ff2d4eefc"
            ],
            "tags": {
              "Name": "Mongod-db-Nacl"
            },
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.db.aws_subnet.db1",
            "module.db.aws_subnet.db2",
            "module.db.aws_subnet.db3"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ab8930e83ba860f0",
            "owner_id": "643979662799",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014045f5f34cda8d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Abi-Individual-Project-public"
            },
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f1a38c4e880f2789",
            "owner_id": "643979662799",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Abi Database Route Table"
            },
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d6b6ff7f428fa42",
            "route_table_id": "rtb-0ab8930e83ba860f0",
            "subnet_id": "subnet-05561b827ccbd1ff6"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.n_tier",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app_1"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084d5f43030bf55e9",
            "route_table_id": "rtb-0ab8930e83ba860f0",
            "subnet_id": "subnet-064f445551f7f7dd8"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.n_tier",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app_2"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f63f4215b2fe0b0",
            "route_table_id": "rtb-0ab8930e83ba860f0",
            "subnet_id": "subnet-0670ab79760eadc48"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.n_tier",
            "module.app.aws_route_table.app",
            "module.app.aws_subnet.app_3"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e0fee3431c6539b",
            "route_table_id": "rtb-0f1a38c4e880f2789",
            "subnet_id": "subnet-01593caa85446e9e5"
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.db.aws_route_table.db",
            "module.db.aws_subnet.db1"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8972a3eccd0698e",
            "route_table_id": "rtb-0f1a38c4e880f2789",
            "subnet_id": "subnet-04bb065b6834d05ed"
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.db.aws_route_table.db",
            "module.db.aws_subnet.db2"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8bbc74162c4c6c8",
            "route_table_id": "rtb-0f1a38c4e880f2789",
            "subnet_id": "subnet-07429dc6ff2d4eefc"
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.db.aws_route_table.db",
            "module.db.aws_subnet.db3"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643979662799:security-group/sg-0a94c25c3efdb092a",
            "description": "Application access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a94c25c3efdb092a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Application security groups",
            "name_prefix": null,
            "owner_id": "643979662799",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643979662799:security-group/sg-0bdd6a0f663b4e6f5",
            "description": "db Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdd6a0f663b4e6f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a94c25c3efdb092a"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "Mongod-db",
            "name_prefix": null,
            "owner_id": "643979662799",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Mongod-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier",
            "module.app.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643979662799:subnet/subnet-05561b827ccbd1ff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-05561b827ccbd1ff6",
            "map_public_ip_on_launch": true,
            "owner_id": "643979662799",
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643979662799:subnet/subnet-064f445551f7f7dd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-064f445551f7f7dd8",
            "map_public_ip_on_launch": true,
            "owner_id": "643979662799",
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643979662799:subnet/subnet-0670ab79760eadc48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0670ab79760eadc48",
            "map_public_ip_on_launch": true,
            "owner_id": "643979662799",
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643979662799:subnet/subnet-01593caa85446e9e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01593caa85446e9e5",
            "map_public_ip_on_launch": false,
            "owner_id": "643979662799",
            "tags": {
              "Name": "Mongod-db1-subnet"
            },
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643979662799:subnet/subnet-04bb065b6834d05ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-04bb065b6834d05ed",
            "map_public_ip_on_launch": false,
            "owner_id": "643979662799",
            "tags": {
              "Name": "Mongod-db2-subnet"
            },
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643979662799:subnet/subnet-07429dc6ff2d4eefc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-07429dc6ff2d4eefc",
            "map_public_ip_on_launch": false,
            "owner_id": "643979662799",
            "tags": {
              "Name": "Mongod-db3-subnet"
            },
            "vpc_id": "vpc-0d17110a25941edcd"
          },
          "dependencies": [
            "aws_vpc.n_tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "n_tier",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:643979662799:vpc/vpc-0d17110a25941edcd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071f10743d82e72be",
            "default_route_table_id": "rtb-0c3dffac1bead0271",
            "default_security_group_id": "sg-078fafaed2dbe778f",
            "dhcp_options_id": "dopt-0a29776c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d17110a25941edcd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c3dffac1bead0271",
            "owner_id": "643979662799"
          }
        }
      ]
    }
  ]
}